<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carlosgutierrez.prepayandroid.LoginActivity">

    <Button
        android:id="@+id/enterButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pinEdText"
        android:layout_centerHorizontal="true"
        android:onClick="registerUser"
        android:text="@string/enter" />

    <EditText
        android:id="@+id/userEdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="text" />

    <EditText
        android:id="@+id/pinEdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEdText"
        android:ems="10"
        android:hint="@string/pin"
        android:inputType="number" />

</RelativeLayout>
